Issue #14 Implemented warning when opening map on mobile

--- a/static/css/map_mobile.css
+++ b/static/css/map_mobile.css
@@ -49,6 +49,23 @@
     font-size: 7px
 }
 
+/************************   warning upon first loading    ******************************/
+
+#dataWarning {
+    display: none;
+}
+
+#facybox {
+  position: absolute;
+  width: 95%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  text-align: left;
+  margin-top: 50px;
+}
+
+
 /************************   side bar    ******************************/
 
 
